--- a/emacs.org
+++ b/emacs.org
@@ -995,9 +995,7 @@ looks good.  It will also define a default theme to start with.
   (modus-themes-after-load-theme . forge/lin-macos-system-colors)
   :custom
   (modus-themes-scale-headings t)
-  (modus-themes-mixed-fonts t)
-  :init
-  (modus-themes-load-themes))
+  (modus-themes-mixed-fonts t))
 
 ;; https://github.com/rougier/nano-theme
 (use-package nano-theme)
