update lin-mode config to current practice

--- a/emacs.org
+++ b/emacs.org
@@ -1103,18 +1103,9 @@ The following are modes I no longer use.  Configuration is here for reference.
 #+begin_src emacs-lisp
 (use-package lin
   :config
+  (setq lin-face 'lin-mac-override-fg)
   (dolist (hook '(elfeed-search-mode-hook notmuch-search-mode-hook package-menu-mode-hook))
     (add-hook hook #'lin-mode)))
-
-;; https://gitlab.com/protesilaos/lin/
-(defun forge/lin-macos-system-colors ()
-  "Change foreground and background colors of this line."
-  (interactive)
-  (when (forge/system-type-darwin-p)
-    (set-face-attribute 'hl-line nil
-                        :foreground "alternateSelectedControlTextColor"
-                        :background "selectedContentBackgroundColor")))
-(add-hook 'ns-system-appearance-change-functions #'forge/lin-macos-system-colors)
 
 #+end_src
 * User interface elements
