--- a/emacs.org
+++ b/emacs.org
@@ -1568,6 +1568,12 @@ the window contents.
         (name . "\\*magit")
         (name . "magit-")
         (name . "git-monitor")))
+      ("Slack"
+       (or
+        (name . "^\\*Slack Log")
+        (name . "^\\*Slack Event")
+        (mode . slack-message-buffer-mode)
+        (mode . slack-mode)))
       ("Commands"
        (or
         (mode . shell-mode)
