Update ibuffer filters for notmuch group

--- a/emacs.org
+++ b/emacs.org
@@ -1540,8 +1540,10 @@ the window contents.
       ("Notmuch"
        (or
         (name . "\\*notmuch-")
-        (mode . notmuch-search)
-        (mode . notmuch-show)))
+        (mode . notmuch-search-mode)
+        (mode . notmuch-show-mode)
+        (mode . notmuch-message-mode)
+        (mode . message-mode)))
       ("Org"
        (or
         (name . "^\\*Calendar\\*$")
