--- a/emacs.org
+++ b/emacs.org
@@ -3328,6 +3328,7 @@ Miscellaneous notes:
   (org-refile-use-outline-path 'file)
   (org-refile-targets '(("inbox.org" :maxlevel . 2)
                         ("agenda.org" :maxlevel . 3)
+                        ("articles.org" :maxlevel . 3)
                         ("notebook.org" :maxlevel . 5)
                         ("work.org" :maxlevel . 5)
                         ("personal.org" :maxlevel . 5)))
