update agenda to show closed over last 10 days

--- a/emacs.org
+++ b/emacs.org
@@ -3412,8 +3412,8 @@ Miscellaneous notes:
                                               (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline))
                                               (org-agenda-prefix-format "  %i %-12:c [%e] ")))
 
-                                       (tags "CLOSED>=\"<today>\""
-                                             ((org-agenda-overriding-header "\nCompleted today\n")))))))
+                                       (tags "CLOSED>=\"<-10d>\""
+                                             ((org-agenda-overriding-header "\nCompleted last 10 days\n")))))))
   ;;  (agenda nil
   ;;          ((org-agenda-entry-types '(:deadline))
   ;;           (org-agenda-format-date "")
