move custom.el back to emacs.d/user/
not sure why I moved it emacs.d/, but it belongs in the subdirectory

--- a/emacs.org
+++ b/emacs.org
@@ -387,7 +387,7 @@ behavior, and load =custom.el= file, used by /customize/.
         large-file-warning-threshold 50000000))
 
 ;; Load custom and then do basic initialization.
-(setq custom-file (locate-user-emacs-file "custom.el"))
+(setq custom-file (expand-file-name "custom.el" forge-personal-dir))
 (when (file-exists-p custom-file)
   (load custom-file))
 (forge/initialize)
