--- a/emacs.org
+++ b/emacs.org
@@ -2669,9 +2669,9 @@ headers/ field can be useful if you need to add headers on the outgoing email.
 [[http://gnus.org/manual/gnus_129.html][gnus-dired]] is an option for attaching files to email.
 
 #+begin_src emacs-lisp
-(with-eval-after-load 'gnus-dired
-  (add-hook 'dired-mode #'turn-on-gnus-dired-mode)
-  (setq gnus-dired-mail-mode 'notmuch-user-agent))
+(add-hook 'dired-mode #'turn-on-gnus-dired-mode)
+(with-eval-after-load
+    (setq gnus-dired-mail-mode 'notmuch-user-agent))
 #+end_src
 
 Sometimes it is convenient to open a new frame and compose an email there.
@@ -3306,6 +3306,7 @@ Miscellaneous notes:
 
   :custom
   (org-agenda-skip-scheduled-if-deadline-is-shown t)
+  (org-attach-id-dir "~/annex/org/data/")
   (org-babel-python-command "python3")
   (org-catch-invisible-edits 'smart)
   (org-clock-display-default-range 'thisweek)
@@ -3411,6 +3412,11 @@ Miscellaneous notes:
                                               (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline))
                                               (org-agenda-prefix-format "  %i %-12:c [%e] ")))
 
+                                       (todo "WAITING"
+                                             ((org-agenda-overriding-header "\nWaiting\n")
+                                              (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline))
+                                              (org-agenda-prefix-format "  %i %-12:c [%e] ")))
+
                                        (tags "CLOSED>=\"<-10d>\""
                                              ((org-agenda-overriding-header "\nCompleted last 10 days\n")))))))
   ;;  (agenda nil
@@ -3432,6 +3438,10 @@ Miscellaneous notes:
                                 ("i" "Inbox" entry
                                  (file "inbox.org")
                                  "* TODO %? \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\nReference: %a\n")
+
+                                ("c" "Calendar invite" entry
+                                 (file+headline "agenda.org" "Future")
+                                 (function notmuch-calendar-capture-event) :prepend t)
 
                                 ("n" "Meeting notes" entry
                                  (file+olp+datetree "~/forge/journal.org")
