--- a/emacs.org
+++ b/emacs.org
@@ -3312,6 +3312,7 @@ Miscellaneous notes:
   :custom
   (org-agenda-skip-scheduled-if-deadline-is-shown t)
   (org-attach-id-dir "~/annex/org/data/")
+  (org-attach-method 'mv)
   (org-babel-python-command "python3")
   (org-catch-invisible-edits 'smart)
   (org-clock-display-default-range 'thisweek)
